--- a/WEB F1/Web F1/index.html
+++ b/WEB F1/Web F1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula 1 - Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/Web F1/CSS/styles.css">
+    <link rel="stylesheet" href="/WEB F1/Web F1/CSS/styles.css">
 </head>
 <body>
     <!-- Header -->
