--- a/WEB F1/Web F1/index.html
+++ b/WEB F1/Web F1/index.html
@@ -20,9 +20,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="pages/schedule.html">Schedule</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/drivers.html">Drivers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/teams.html">Teams</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../pages/schedule.html">Schedule</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../pages/drivers.html">Drivers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../pages/teams.html">Teams</a></li>
                 </ul>
             </div>
         </div>
